feat(trasacao): melhorias na API